--- a/aula1.ipynb
+++ b/aula1.ipynb
@@ -22,6 +22,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "cdbc6ca6-44b2-4992-9877-560d023a9ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_pol(medida):\n",
+    "    return medida*2.54\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "95edab26-b188-4429-8c65-963319b3dff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.62"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convert_pol(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6360cf01-12d5-4d6d-b08e-fd21549fd687",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número atual: 1\n",
+      "Número atual: 2\n",
+      "Número atual: 3\n",
+      "Número atual: 4\n",
+      "Número atual: 6\n",
+      "Número alvo 7 encontrado. Saindo do loop.\n",
+      "Loop terminado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lista de números\n",
+    "numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "\n",
+    "# Número alvo para 'break'\n",
+    "numero_alvo = 7\n",
+    "\n",
+    "# Número alvo para 'continue'\n",
+    "numero_pular = 5\n",
+    "\n",
+    "for numero in numeros:\n",
+    "    if numero == numero_pular:\n",
+    "        # Pular a iteração atual e continuar com a próxima\n",
+    "        continue\n",
+    "    if numero == numero_alvo:\n",
+    "        # Sair do loop completamente\n",
+    "        print(f\"Número alvo {numero_alvo} encontrado. Saindo do loop.\")\n",
+    "        break\n",
+    "    print(f\"Número atual: {numero}\")\n",
+    "\n",
+    "print(\"Loop terminado.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1457e200-93b6-4223-b624-e370489c2a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contador atual: 1\n",
+      "Contador atual: 2\n",
+      "Contador atual: 3\n",
+      "Contador atual: 4\n",
+      "Contador é 5. Pulando a iteração.\n",
+      "Contador atual: 6\n",
+      "Número alvo 7 encontrado. Saindo do loop.\n",
+      "Loop terminado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inicialização da variável\n",
+    "contador = 0\n",
+    "\n",
+    "# Número alvo para 'break'\n",
+    "numero_alvo = 7\n",
+    "\n",
+    "# Número alvo para 'continue'\n",
+    "numero_pular = 5\n",
+    "\n",
+    "while contador < 10:\n",
+    "    contador += 1\n",
+    "    if contador == numero_pular:\n",
+    "        # Pular a iteração atual e continuar com a próxima\n",
+    "        print(f\"Contador é {contador}. Pulando a iteração.\")\n",
+    "        continue\n",
+    "    if contador == numero_alvo:\n",
+    "        # Sair do loop completamente\n",
+    "        print(f\"Número alvo {numero_alvo} encontrado. Saindo do loop.\")\n",
+    "        break\n",
+    "    print(f\"Contador atual: {contador}\")\n",
+    "\n",
+    "print(\"Loop terminado.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "6c0d7535-3e79-4eea-b252-4105bf35269f",
    "metadata": {},
